--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -1,12 +1,6 @@
 .profile {
-  /* mix-width: 538px; */
   width: 300px;
-  /* display: flex;
-  align-items: center; */
-
-  /* width: 290px; */
-  /* border: 1px solid red; */
-  /* border-radius: 40%; */
+  margin-bottom: 50px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
@@ -17,15 +11,14 @@
   padding: 30px 0;
   background-color: white;
   color: black;
-  /* border: 1px solid yellow; */
 }
 
 .avatar {
   width: 150px;
   height: 150px;
   border-radius: 50%;
-  /* border: 1px solid green; */
   margin-bottom: 10px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .name {
@@ -38,18 +31,16 @@
   margin-bottom: 5px;
 }
 
-.location {
-}
+.location {}
 
 .stats {
   display: flex;
-  /* border: 2px solid blue; */
 }
 
 .list {
   display: flex;
   align-items: center;
-  padding: 3px 0;
+  padding: 10px 0;
   width: 100%;
   flex-direction: column;
   background-color: grey;
@@ -57,6 +48,7 @@
 }
 
 .label {
+  margin-bottom: 5px;
 }
 
 .quantity {
