--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
-@import-normalize; /* bring in normalize.css styles */
+@import-normalize;
+/* bring in normalize.css styles */
 
 body {
   margin: 0;
@@ -64,9 +65,10 @@ button {
 
 #root {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
-  
+
   margin-right: auto;
   margin-left: auto;
 }
